# CROPPING

./: .gitignore  INSTALL.md  LICENSE  README.md  __init__.py  blur_measurement.py  calibration_core.py  calibration_gui.py  cine_iterator_test_4mm_every10.py  cine_loader.py  compare_results.py  debug_blur.py  frame_cropping.py  frame_selector_test_4mm_viz.py  inference_real_crops.py  install.py  model.py  physics.py  pyproject.toml  requirements.txt  run_every10_4mm.py  setup.py  sphere_processing.py  synthetic_blur.py  test_adaptive_fine_sweep.py  test_blur_fix.py  test_concern1_geometry.py  test_model.py  train.py  training_gui.py  validation.py
.claude/: settings.local.json
Calibration/: README.md  __init__.py  __main__.py  batch_runner.py  blur_measurement.py  calibration_core.py  calibration_gui.py  cine_loader.py  debug_blur.py  requirements.txt  validation.py
Extras/: .gitignore
Extras/archive/: blur_scaling_sanity_check.py  compare_preprocessing.py  investigate_flattening.py  investigate_margins_v2.py  investigate_margins_v2_fast.py  test_adaptive_fine_sweep.py  test_adaptive_margin.py  test_adaptive_v2.py  test_blur_fix.py  test_concern1_geometry.py  test_feather.py
Extras/archive/fingerprint_one_offs/: investigate_alignment.py  investigate_calibration_invariance.py  investigate_like_for_like.py  verify_anchored_contour.py  verify_calibration_gui_exact.py  verify_dual_pipeline.py  verify_flatten_alignment.py  verify_new_synthetic_order.py  verify_raw_erf.py  verify_resolution_scaled_feather.py  verify_sphere_as_template.py  (+3 more)
Extras/experiments/: __init__.py  analyze_validation_results.py  backfill_blur.py  backfill_scale.py  batch_runner.py  blur_scaling_sanity_check.py  classical_baseline.py  compare_flatten_configs.py  compare_results.py  investigate_flattening.py  investigate_margins.py  investigate_margins_v2.py  investigate_margins_v2_fast.py  investigate_margins_v3.py  paths_config.py  stage2_packager.py  test_adaptive_v2.py  test_cfg1_vs_cfg4_inference.py  test_feather.py  test_simple_flatten.py  test_two_checkpoints.py  verify_full_blur_pipeline.py  visualise_circle_detection.py
Extras/tests/: __init__.py  test_auto_preprocess.py  test_calibration_model.py  test_fingerprint.py  test_gui.py  test_pipeline.py
FULL/: .gitignore  cine_iterator_full_every10.py  cine_iterator_full_every10_global.py  cine_iterator_full_every10_perfolder.py  frame_cropping_full.py  frame_selector_full.py  run_full_every10.py
Inference/: README.md  __init__.py  __main__.py  auto_preprocess.py  geometry_overlay.py  inference_engine.py  inference_gui.py  requirements.txt  run_io.py
Inference/widgets/: __init__.py  action_bar.py  active_mode_strip.py  frame_canvas.py  frame_slider.py  input_mode_tabs.py  locked_banner.py  preview_row.py  result_panel.py  save_dialog.py  session_indicator.py  settings_dialog.py  status_bar.py  tooltips.py  view_mode_toggle.py  watch_folder_bar.py
Modular/: LICENSE  README.md  cine_io_modular.py  config_modular.py  crop_calibration_modular.py  cropping_modular.py  darkness_analysis_modular.py  focus_analysis.py  focus_metrics_modular.py  geom_analysis_modular.py  gui_modular.py  image_utils_modular.py  main_modular_runner.py  main_runner.py  output_writer_modular.py  parallel_utils_modular.py  phantom_silence_modular.py  pipeline_folder.py  pipeline_folder_every10_parallel.py  pipeline_global.py  pipeline_global_every10_parallel.py  plotting_modular.py  profiling_modular.py  requirements.txt  setup_environment.py  timing_utils_modular.py  workers_modular.py
Modular/OUTPUT/: focus_classified.csv  focus_metrics_computed.csv  profiling_global.json
Preprocessing/: .gitignore  LICENSE  README.md  __init__.py  __main__.py  add_diameter_to_sharp_crops.py  cine_io.py  cine_io_modular.py  config.py  config_loader.py  config_modular.py  crop_blur_measurement.py  crop_calibration.py  crop_calibration_modular.py  cropping_modular.py  darkness_analysis.py  darkness_analysis_modular.py  flatten_existing_crops.py  focus_analysis.py  focus_classification.py  focus_metrics.py  focus_metrics_modular.py  geom_analysis.py  geom_analysis_modular.py  gui.py  gui_modular.py  image_utils.py  image_utils_modular.py  logging_config.py  output_writer.py  output_writer_modular.py  parallel_utils.py  parallel_utils_modular.py  phantom_silence.py  phantom_silence_modular.py  phantom_utils.py  pipeline_folder.py  pipeline_global.py  plotting.py  plotting_modular.py  (+10 more)
Training/: .gitignore  README.md  __init__.py  __main__.py  calibration_editor.py  calibration_editor_dialog.py  dataset.py  inference_real_crops.py  investigate_margins_v3.py  losses.py  model.py  requirements.txt  run_paths.py  synthetic_blur.py  test_cuda.py  test_model.py  train.py  training_gui.py  utils.py
Training/concern1_output/: concern1_results.csv
Training/feather_test_output/: feather_test_results.csv
Training/investigation_output/: results.txt
Training/margin_investigation_output/: margin_investigation_results.csv
Training/margin_v2_output/: detection_comparison.csv  margin_v2_results.csv
Training/margin_v3_output/: fine_sweep_results.csv
centering/: cine_iterator_geometric_4mm_every10.py  frame_cropping_geometric.py  frame_selector_geometric_4mm.py  run_geometric_every10_4mm.py
concern1_output/: concern1_summary.txt
experiments/: compare_preprocessing.py  dissertation_figures.py  test_adaptive_margin.py
inference_results/inference_20260319_081628/: validation_summary.txt
inference_results/inference_20260319_082157/: validation_summary.txt
inference_results/inference_20260319_112646/: validation_summary.txt
inference_results/inference_20260319_113826/: validation_summary.txt
inference_results/preprocessing_comparison/: summary.csv
margin_v3_output/: margin_v3_results.csv
tools/fingerprint_checker/: __init__.py  fingerprint_analyses.py  fingerprint_cache.py  fingerprint_gui.py  fingerprint_io.py  fingerprint_orchestrator.py  fingerprint_report.py  investigate_alignment.py  scale_chain.py  verify_flatten_alignment.py
tools/preprocessing_lab/: unified_preprocess.py
(+86 files in other folders)
