[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropping"
version = "0.1.0"
description = "Depth-from-defocus measurement pipeline for high-speed shadowgraphy"
readme = "README.md"
# Python 3.11 only. The pyphantom wheel (Phantom SDK) is built `py311-none-any`
# and won't install on any other version. Pip will refuse to install this
# project on 3.10/3.12/3.13/3.14, which is the intended behaviour.
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Justice Ward"},
]

# Version pins — read these BEFORE bumping anything:
#   numpy<2.0    — required by Phantom SDK (numpy 2.x breaks pyphantom binary
#                  ABI). Cascading effect: forces compatible scipy / opencv /
#                  pandas versions. Pip's resolver handles the cascade as long
#                  as numpy is pinned <2.0.
#   torch        — installed via `install.py` from the CUDA-specific index URL,
#                  not via this declaration. See [project.optional-dependencies]
#                  for the inert PyPI fallback.
dependencies = [
    "numpy>=1.21.0,<2.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "PyYAML>=5.4.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
training = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tensorboard>=2.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]
all = [
    "cropping[training]",
    "cropping[dev]",
]

[tool.setuptools.packages.find]
include = [
    "Preprocessing",
    "Preprocessing.*",
    "Calibration",
    "Calibration.*",
    "Training",
    "Training.*",
    "Inference",
    "Inference.*",
]

[project.scripts]
cropping-preprocess = "Preprocessing.__main__:run_gui"
cropping-calibrate = "Calibration.__main__:_run"
cropping-train = "Training.__main__:_run"
cropping-infer = "Inference.inference_gui:main"

[project.urls]
Repository = "https://github.com/SykesLab/CROPPING"

[tool.pytest.ini_options]
testpaths = ["Extras/tests"]
timeout = 10
