[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropping"
version = "0.1.0"
description = "Depth-from-defocus measurement pipeline for high-speed shadowgraphy"
readme = "README.md"
# Python 3.11 only. The pyphantom wheel (Phantom SDK) is built `py311-none-any`
# and won't install on any other version. Pip will refuse to install this
# project on 3.10/3.12/3.13/3.14, which is the intended behaviour.
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Justice Ward"},
]

# Version pins — read these BEFORE bumping anything:
#
#   numpy<2.0           — REQUIRED by Phantom SDK (numpy 2.x breaks pyphantom
#                         binary ABI). The cascading constraint is what forces
#                         scipy, opencv, pandas to compatible numpy-1.x lines.
#   scipy<1.13          — scipy 1.13+ requires numpy>=2.0. Without this cap,
#                         pip's resolver gets confused; with it, the conflict
#                         is explicit.
#   opencv-python<5     — opencv 5 (whenever it lands) is expected to drop
#                         numpy 1.x support and may change cv2 API.
#   Pillow<11           — Pillow 10 removed Image.ANTIALIAS; Pillow 11 removed
#                         more. Codebase doesn't use removed APIs but the cap
#                         is defensive.
#   matplotlib<4        — matplotlib 4 (future) may break Tk backend usage.
#   pandas<3            — pandas 3 (future) may drop legacy column access we
#                         use. Defensive cap.
#   PyYAML<7, tqdm<5    — defensive caps; both libraries are stable but the
#                         caps protect against unrelated breaking changes.
#   torch<3, torchvision<1, tensorboard<3
#                       — torch 2.x + torchvision 0.x + tensorboard 2.x is
#                         the supported generation. Major-version caps prevent
#                         silent breakage when torch 3 lands.
#
# install.py installs torch + torchvision from the CUDA-specific index URL
# (NOT from PyPI). The [training] extra below carries the same pins so plain
# `pip install -e ".[training]"` still produces a working (CPU) install.
dependencies = [
    "numpy>=1.21.0,<2.0",
    "scipy>=1.7.0,<1.13",
    "opencv-python>=4.5.0,<5",
    "Pillow>=8.0.0,<11",
    "PyYAML>=5.4.0,<7",
    "matplotlib>=3.4.0,<4",
    "pandas>=1.3.0,<3",
    "tqdm>=4.60.0,<5",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0,<3",
    "torchvision>=0.15.0,<1",
    "tensorboard>=2.10.0,<3",
]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-timeout>=2.0.0,<3",
]
all = [
    "cropping[training]",
    "cropping[dev]",
]

[tool.setuptools.packages.find]
include = [
    "Preprocessing",
    "Preprocessing.*",
    "Calibration",
    "Calibration.*",
    "Training",
    "Training.*",
    "Inference",
    "Inference.*",
]

[project.scripts]
cropping-preprocess = "Preprocessing.__main__:run_gui"
cropping-calibrate = "Calibration.__main__:_run"
cropping-train = "Training.__main__:_run"
cropping-infer = "Inference.inference_gui:main"

[project.urls]
Repository = "https://github.com/SykesLab/CROPPING"

[tool.pytest.ini_options]
testpaths = ["Extras/tests"]
timeout = 10
